tdf#125657: restore conversion of a:srcRect attributes to integers

Regression from commit 1fe24bb1e2fbe44a4bf2c03297e259b3a18b1235

Change-Id: I5597fe6a7f7c54ad9bf2634eba5245e2e4a1efbf